--- a/styles/components/landing-page/browse-products.module.css
+++ b/styles/components/landing-page/browse-products.module.css
@@ -6,6 +6,7 @@
     background: url('/images/ProductBackground_final.jpg') fixed ;
     filter: grayscale(80%);
     cursor: pointer;
+    background-size:50%;
 }
 
 .section:hover {
