--- a/styles/components/products/image-slide.module.css
+++ b/styles/components/products/image-slide.module.css
@@ -38,3 +38,49 @@
         margin-right: 20px;
     }
 }
+.dropbtn {
+    background: url("../../../public/bookmark-icon-.png") no-repeat;
+    background-size: 150%;
+    background-color: #f9f9f9;
+    background-position-x: 80%;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+   
+  }
+  
+  .dropdown {
+    position: absolute;
+    
+  }
+  
+  .dropdownContent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+   line-height: 10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    color:black
+  }
+  
+  .dropdownContent a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdownContent a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdownContent {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #454b47;
+  }
