--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -194,10 +194,11 @@ min-width: 100%;
   height: 42px;
   width: 24px;
   border-radius: 14px;
-  transform: none;
+  position: absolute;
+  transform: translate(-50%,-50%);
   border: 2px solid white;
-  top: 170px;
-  margin-left: 49%;
+  left: 50%;
+  bottom: 70%;
 }
 
 .wheel {
