--- a/styles/components/header.module.css
+++ b/styles/components/header.module.css
@@ -16,6 +16,7 @@
     padding: 10px 10px;
     cursor: pointer;
     font-weight: bold;
+    font-size:10px
 }
 
 .navLink:hover {
@@ -31,6 +32,7 @@
 
     .navLink {
         padding: 10px 50px;
+        font-size:18px
     }
 }
 
