--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,20 +22,30 @@
 }
 
 .backgroundImage{
-  background: url("../public/backgroundImage.png");
-  background-repeat: no-repeat;
-  background-size: 100% 87%;
-  
+  /* background: url("../public/backgroundImage.png");
+  background-repeat:no-repeat;
+
+   background-size:100% 100%; */
+   background: transparent;
 z-index: 0;
 min-width: 100%;
     min-height: 110%;
-    animation: hideAnimation 0s  5s;
+    animation: hideAnimation 0s  10s;
   animation-fill-mode: forwards;
   
 }
 
 @keyframes hideAnimation {
-  to {
+  0%{
+min-width: 0%;
+  }
+  50%{
+min-width: 50%;
+  }
+  90%{
+    min-width: 100%;
+  }
+  100% {
     visibility: hidden;
     min-width: 0;
     min-height: 0;
@@ -65,6 +75,7 @@ min-width: 100%;
 .headingContainer {
     display: flex;
     align-items: center;
+   
 }
 
 .heading {
@@ -80,6 +91,75 @@ min-width: 100%;
 }
 .logoContainer:hover{
     transform: rotate(360deg);
+}
+
+
+.headingContainerOld {
+  display: flex;
+  align-items: center;
+  animation: hideAnimation 0s  15s;
+  animation-fill-mode: forwards;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  transition: width 4s;
+ 
+}
+
+
+.headingOld {
+  font-size: 122px;
+  margin: 0;
+  
+  overflow: hidden;
+  background: linear-gradient(90deg, #fff, #fff);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 3s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
+}
+
+@keyframes animate {
+  0% {
+    background-position: -500%;
+  }
+  100% {
+    background-position: 500%;
+  }
+}
+
+
+.logoContainerOld {
+  width: 40px;
+  margin-left: 10px;
+  margin-bottom: 100px;
+  transition: all 3s;
+  animation: hideAnimation 0s  15s;
+  animation-fill-mode: forwards;
+}
+
+.logoContainerOld:hover{
+  transform: rotate(360deg);
+}
+
+
+
+.subHeadingOld {
+  margin: 0;
+  text-transform: uppercase;
+  position: absolute;
+  top: 56%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  overflow: hidden;
+  background: linear-gradient(90deg, #000, #fff, #000);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 5s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
 
 .subHeading {
