--- a/styles/components/products/image-slide.module.css
+++ b/styles/components/products/image-slide.module.css
@@ -42,7 +42,8 @@
     background: url("../../../public/bookmark-icon-.png") no-repeat;
     background-size: 180%;
     background-color: transparent;
-    background-position-x: 80%;
+    background-position-x: 60%;
+    background-position-y: 50%;
     color: white;
     padding: 16px;
     font-size: 16px;
