--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -17,9 +17,9 @@
 }
 
 .carousel {
-    height: 70vh;
+    /* height: 70vh; */
     width: 100%;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     z-index: 1;
@@ -31,8 +31,8 @@
 }
 
 .imageWrapper {
-    position: relative;
-    height: 70vh;
+    /* position: relative; */
+    /* height: 70vh; */
     width: 100%;
 }
 
@@ -95,4 +95,19 @@
         font-size: 80px;
         margin-bottom: 20px;
     }
+}
+.gridContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr)); /* Adjust the minmax and other properties as needed */
+    gap: 20px;
+    justify-content: space-around;
+}
+
+.gridItem {
+    text-align: center;
+}
+
+.imageWrapper {
+    overflow: hidden;
+    border-radius: 8px; /* Add any styling for the image wrapper */
 }
