--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -9,12 +9,14 @@
     margin: 0 20px 20px 20px;
     justify-content: center;
     display: flex;
+    text-align: justify;
 }
 
 .cardBody {
     color: black;
     font-size: 14px;
     font-weight: bold;
+    text-align: justify;
 }
 
 .flipCard {
