--- a/styles/components/footer.module.css
+++ b/styles/components/footer.module.css
@@ -1,8 +1,9 @@
 .footer {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     align-items: center;
     margin: 0 10px;
+    padding-top:20px;
     height: 80px;
 }
 
@@ -30,13 +31,14 @@
 }
 
 .socialLinks {
-    display: flex;
+    /* display: block; */
     justify-content: space-between;
     width: 30%;
 }
 
 .socialLinksSection {
-    display: flex;
+    display: inline-flex;
+    margin:0 auto;
    
 }
 
@@ -53,7 +55,7 @@
 
 @media only screen and (min-width: 768px) {
     .footer {
-        height: 100px;
+        height: auto;
     }
 
     .trademark {
@@ -77,7 +79,33 @@
 
 @media only screen and (min-width: 1024px) {
     .footer {
-        height: 200px;
-        padding: 0 50px;
+        height: auto;
+        /* padding: 0 50px; */
     }
 }
+.footerlinks{
+color: #fff;
+list-style: none;
+padding-left: 0;
+text-align: center;
+
+}
+
+.footertitle{
+    text-align: center;
+    color:#ffc107
+}
+.footerlinks li{
+    padding: 8px;
+}
+
+.abtcont{
+    text-align: justify;
+}
+.footerlinks li a:hover
+.footerlinks li a:focus{
+    text-decoration: underline;
+    color:#ffc107 !important;
+    cursor: pointer;
+}
+
