--- a/styles/components/landing-page/projects.module.css
+++ b/styles/components/landing-page/projects.module.css
@@ -29,10 +29,11 @@
     color: rgb(201, 160, 48);
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: justify;
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 26px;
+    font-size: 20px;
+    text-align: justify;
 }
 
 @media screen and (min-width: 768px) {
