--- a/styles/components/products/image-slide.module.css
+++ b/styles/components/products/image-slide.module.css
@@ -29,7 +29,7 @@
     }
 
     .title {
-        margin-bottom: 40px;
+        margin-bottom: 20px;
     }
 
     .imageWrapper {
@@ -85,3 +85,8 @@
   .dropdown:hover .dropbtn {
     background-color: #454b47;
   }
+
+  .imageWrapper1 {
+    padding-left: 25px;
+   }
+  
