--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,10 @@ li a {
   color: #fff;
   text-decoration: none;
 }
+li a:hover {
+  color: #fff;
+  text-decoration: none;
+}
 
 * {
   box-sizing: border-box;
